Updated job run status incrementer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+## By Default for Spring batch Meta information it uses H2 DB, we have to invoke manually by proving DB properties and store info in DB we have to add this property  spring.batch.jdbc.initialize-schema=always
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.username=root
+spring.datasource.password=NAREN@ram5*
+# TO Store the job run information in the DB
+spring.batch.jdbc.initialize-schema=always
